--- a/styles/style.css
+++ b/styles/style.css
@@ -1,51 +1,111 @@
-html {
-    font-size: 10px; /* px means "pixels": the base font size is now 10 pixels high */
-    font-family: "Roboto",sans-serif; /* this should be the rest of the output you got from Google Fonts */
-  }
-  h1 {
-    font-family:'Gill Sans',  sans-serif;
-    font-size: 40px;
-    text-align: center;
-  }
-  
-  p,
-  li,
-  h3,a {
-    font-size: 23px;
-    line-height: 1.8;
-    letter-spacing: 0.5px;
-  }
-  html {
-    background-color: #E6E6BB;
-    background:  linear-gradient(rgba(50, 70, 120, 0.7), rgba(20, 40, 80, 0.7)), url("../images/cellular-comm.jpg");
-    background-repeat: repeat;
-    background-size: cover;
-    z-index: -1;
-  }
-  html.scrolled:before {
-    background: linear-gradient(rgba(50, 70, 120, 0.9), rgba(20, 40, 80, 0.9)), url("../images/cellular-comm.jpg");
-    background-size: cover;
-    transition: background 0.5s ease-in-out; /* Transition for smooth effect */
+p,
+li,
+h3,
+a {
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.8;
+  letter-spacing: 0.1px;
+  font-style: normal;
+  font-weight: 400;
+  font-variant: normal;
 }
-  h1 {
-    margin: 0;
-    padding: 40px 20px 40px 20px;
-    color: #00539f;
-    text-shadow: 0.5px 1px 0.5px black;
-  }
 
-  body {
-    width: 1000px;
-    margin: 35px auto;
-    background-color: #5acbf4;
-    background-size: 100% 100%;
-    padding: 0 40px 40px 40px;
-    border: 10px slateblue black;
-    position: relative;
-  }
+html {
+  background: radial-gradient(ellipse at center, rgba(45, 100, 249, 0.7) 0%, rgba(1, 4, 11, 0.7) 100%),
+    url("../images/cellular-comm.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  z-index: -1;
+  height: 100%;
+  margin: 0;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1 {
+  font-family: 'Pacifico', sans-serif;
+  font-size: 36px;
+  text-align: center;
+  margin: 0;
+  padding: 20px 10px;
+  color: #00539f;
+  text-rendering: optimizeSpeed;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: medium;
+  width: 100%;
+  height: 85%;
+  max-width: 1000px;
+  margin: 0 auto;
+  background-color: #5acbf4;
+  background-size: cover;
+  padding: 40px;
+  padding-top: 30px;
+  border: 5px solid rgb(95, 232, 147);
+  position: relative;
+  overflow: auto;
+  border-radius: 15px;
+}
+
+img {
+  display: block;
+  width: 100%;
+  max-width: 900px;
+  margin: auto;
+}
+
+#home,
+#cellular,
+#signal,
+#dsa {
+  padding: 20px;
+  background-color: #c2f2ea;
+  margin-top: 20px;
+  border-radius: 15px;
+}
+
+.topnav {
+  position: fixed;
   
-  img {
-    display: block;
-    width: 900px;
-    margin: auto auto;
-  }
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  max-width: auto;
+  background-color: #24b37c;
+  overflow: auto;
+  z-index: 1000;
+  display: flex;
+  justify-content: space-around; /* Center the links with equal space around them */
+  align-items: center; /* Align vertically in the center */
+}
+
+.topnav a {
+  float: left;
+  width: 25%;
+  box-sizing: border-box;
+  color: #f2f2f2;
+  text-align: center;
+  text-decoration: none;
+  font-size: 17px;
+  padding: 14px 20px; /* Adjust padding as needed */
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: rgb(219, 71, 71);
+}
+
+.topnav a.active {
+  background-color: #a81717;
+  color: white;
+}
