--- a/styles/style.css
+++ b/styles/style.css
@@ -41,7 +41,7 @@ h1 {
 
 body {
   font-family: 'Roboto', sans-serif;
-  font-size: medium;
+  font-size: 1rem;
   width: 100%;
   height: 85%;
   max-width: 1000px;
@@ -108,4 +108,12 @@ img {
 .topnav a.active {
   background-color: #a81717;
   color: white;
+}
+
+@media only screen and (max-width: 600px) {
+  /* Add styles for small screens */
+  body {
+    font-size: 16px;
+    /* Adjust other styles as needed */
+  }
 }
