--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 p,
 li,
 h3,
@@ -110,22 +111,74 @@ img {
   color: white;
 }
 
-@media only screen and (max-width: 600px) {
-  /* Add styles for small screens */
-  body {
-    font-size: 16px;
-    /* Adjust other styles as needed */
-  }
-  #home h1 {
-    font-size: 18px;
-    padding: 8px;
-  }
 
+
+@media (max-width: 767px) {
+  
+  #home,
+    #cellular,
+    #signal,
+    #dsa {
+      padding: 10px;
+      background-color: #c2f2ea;
+      margin-top: 15px;
+      border-radius: 10px;
+      word-spacing: normal;
+      width: fit-content;
+    }
+  
+    p,
+    li,
+    h3,
+    a {
+      font-size: 12px;
+      font-family: "Roboto", sans-serif;
+      line-height: 1.6;
+      letter-spacing: 0.2px;
+      font-style: normal;
+      font-weight: 400;
+      font-variant: common-ligatures;
+    }
   .topnav {
-    padding: 6px;
+    position: relative;
+    transform: translateX(-50%);
+    width: 125%;
+    max-height: auto;
+    max-width: auto;
+    background-color: #24b37c;
+    overflow: auto;
+    z-index: 1000;
+    display: flex;
+    justify-content: space-around; /* Center the links with equal space around them */
+    align-items: center; /* Align vertically in the center */
+  }
+  
+  .topnav a {
+    float: center;
+    width: auto;
+    height: auto;
+    font-size: 14px;
+    box-sizing: border-box;
+    color: #f2f2f2;
+    text-align: center;
+    text-decoration: none;
+    justify-content: space-around;
+    padding: 10px 10px 10px 10px; /* Adjust padding as needed */
+  }
+  
+  .topnav a:hover {
+    background-color: #ddd;
+    color: rgb(219, 71, 71);
+  }
+  
+  .topnav a.active {
+    background-color: #a81717;
+    color: white;
   }
 
-  .topnav a {
-    padding: 6px 10px;
+  h1{
+    font-size: 14.5px;
   }
+
+
 }
